--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,55 @@
+amqp==1.4.9
+anyjson==0.3.3
 asgiref==3.5.0
+attrs==21.4.0
+autobahn==22.1.1
+Automat==20.2.0
+billiard==3.3.0.23
+celery==3.1.26.post2
+celery-with-redis==3.0
+certifi==2021.10.8
+cffi==1.15.0
+channels==3.0.4
+charset-normalizer==2.0.12
+constantly==15.1.0
+cryptography==36.0.1
+cycler==0.11.0
+daphne==3.0.2
+Deprecated==1.2.13
 Django==4.0.1
+django-debug-toolbar==3.2.4
+fonttools==4.29.1
+hyperlink==21.0.0
+idna==3.3
+incremental==21.3.0
+kiwisolver==1.3.2
+kombu==3.0.37
+lxml==4.8.0
+matplotlib==3.5.1
+multitasking==0.0.10
+numpy==1.22.2
+packaging==21.3
+pandas==1.4.1
+Pillow==9.0.1
+psycopg2==2.9.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pyOpenSSL==22.0.0
+pyparsing==3.0.7
+python-dateutil==2.8.2
+pytz==2021.3
+redis==4.1.4
+requests==2.27.1
+service-identity==21.1.0
+six==1.16.0
 sqlparse==0.4.2
+Twisted==22.1.0
+twisted-iocpsupport==1.0.2
+txaio==21.2.1
+typing_extensions==4.1.1
 tzdata==2021.5
+urllib3==1.26.8
+wrapt==1.13.3
+yfinance==0.1.70
+zope.interface==5.4.0
