--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiopg==1.3.3
 amqp==5.0.9
 anyjson==0.3.3
 asgiref==3.5.0
+async-generator==1.10
 async-timeout==4.0.2
 atomicwrites==1.4.0
 attrs==21.4.0
@@ -31,6 +32,7 @@ Django==4.0.1
 django-debug-toolbar==3.2.4
 django-nose==1.4.7
 fonttools==4.29.1
+h11==0.13.0
 hyperlink==21.0.0
 idna==3.3
 incremental==21.3.0
@@ -45,6 +47,7 @@ msgpack==1.0.3
 multitasking==0.0.10
 nose==1.3.7
 numpy==1.22.2
+outcome==1.1.0
 packaging==21.3
 pamqp==3.1.0
 pandas==1.4.1
@@ -59,15 +62,21 @@ pyasn1-modules==0.2.8
 pycparser==2.21
 pyOpenSSL==22.0.0
 pyparsing==3.0.7
+PySocks==1.7.1
 pytest==7.1.1
 python-dateutil==2.8.2
 pytz==2021.3
 redis==4.1.4
 requests==2.27.1
+selenium==4.1.3
 service-identity==21.1.0
 six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
 sqlparse==0.4.2
 tomli==2.0.1
+trio==0.20.0
+trio-websocket==0.9.2
 Twisted==22.1.0
 twisted-iocpsupport==1.0.2
 txaio==21.2.1
@@ -77,5 +86,6 @@ urllib3==1.26.8
 vine==5.0.0
 wcwidth==0.2.5
 wrapt==1.13.3
+wsproto==1.1.0
 yfinance==0.1.70
 zope.interface==5.4.0
