--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ attrs==21.4.0
 autobahn==22.1.1
 Automat==20.2.0
 billiard==3.6.4.0
+black==22.3.0
 carehare==1.0.2
 celery==5.2.3
 certifi==2021.10.8
@@ -45,13 +46,16 @@ matplotlib==3.5.1
 mock==4.0.3
 msgpack==1.0.3
 multitasking==0.0.10
+mypy-extensions==0.4.3
 nose==1.3.7
 numpy==1.22.2
 outcome==1.1.0
 packaging==21.3
 pamqp==3.1.0
 pandas==1.4.1
+pathspec==0.9.0
 Pillow==9.0.1
+platformdirs==2.5.1
 pluggy==1.0.0
 prompt-toolkit==3.0.28
 psycopg2==2.9.3
