--- a/requirements.txt
+++ b/requirements.txt
@@ -54,6 +54,7 @@ packaging==21.3
 pamqp==3.1.0
 pandas==1.4.1
 pathspec==0.9.0
+pep8==1.7.1
 Pillow==9.0.1
 platformdirs==2.5.1
 pluggy==1.0.0
@@ -63,6 +64,7 @@ psycopg2-binary==2.9.3
 py==1.11.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycodestyle==2.8.0
 pycparser==2.21
 pyOpenSSL==22.0.0
 pyparsing==3.0.7
