--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ Django==4.0.1
 django-debug-toolbar==3.2.4
 django-nose==1.4.7
 fonttools==4.29.1
+gunicorn==20.1.0
 h11==0.13.0
 hyperlink==21.0.0
 idna==3.3
